syntax = "proto3";

service Cat {
    rpc FindCuteCat (FindCuteCatMessage) returns (CuteCatResponse) {}
}

message FindCuteCatMessage {
    string catId = 1;
}

message CuteCatResponse {
    string name = 1;
    string kind = 2;
}
